--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         });
         socket.on('chat message', function(msg){
           $('#messages').append($('<li>').text(msg));
-          obj = myObj.u;
-          alert(myObj.u);
+          obj = msg.u;
+          alert(msg.u);
           window.scrollTo(0, document.body.scrollHeight);
         });
       });
