--- a/index.html
+++ b/index.html
@@ -31,8 +31,13 @@
         });
         socket.on('chat message', function(msg){
           $('#messages').append($('<li>').text(msg));
-          obj = msg.u;
-          alert(msg.u);
+          obj = JSON.parse(msg);
+          if(obj.u=='eagle'){
+              if(obj.action=="location")
+              {
+                  alert(obj.action);
+              }
+          }
           window.scrollTo(0, document.body.scrollHeight);
         });
       });
