--- a/index.html
+++ b/index.html
@@ -31,7 +31,14 @@
         });
         socket.on('chat message', function(msg){
           $('#messages').append($('<li>').text(msg));
-          window.scrollTo(0, document.body.scrollHeight);
+	  var obj = JSON.parse(msg);
+          if(obj.u="eagle"){
+              if(obj.action=="location")
+              {
+                  alert(obj.action);
+              }
+          }
+            window.scrollTo(0, document.body.scrollHeight);
         });
       });
 /*function startFunction() {
