--- a/index.html
+++ b/index.html
@@ -31,13 +31,15 @@
         });
         socket.on('chat message', function(msg){
           $('#messages').append($('<li>').text(msg));
-          obj = JSON.parse(msg);
-          if(obj.u=='eagle'){
+          var obj = JSON.parse(msg);
+          if(obj.u="eagle"){
               if(obj.action=="location")
               {
                   alert(obj.action);
               }
           }
+
+          obj = msg.u;
           window.scrollTo(0, document.body.scrollHeight);
         });
       });
