--- a/index.html
+++ b/index.html
@@ -32,14 +32,12 @@
         socket.on('chat message', function(msg){
           $('#messages').append($('<li>').text(msg));
           var obj = JSON.parse(msg);
-          if(obj.u="eagle"){
+          if(obj.u=="eagle"){
               if(obj.action=="location")
               {
                   alert(obj.action);
               }
           }
-
-          obj = msg.u;
           window.scrollTo(0, document.body.scrollHeight);
         });
       });
