--- a/index.html
+++ b/index.html
@@ -36,7 +36,15 @@
           if(obj.u=="eagle"){
               if(obj.action=="location")
               {
-                  alert(obj.action);
+                  var lat = obj.lat;
+                  var lng = obj.lng;
+                  window.eqfeed_callback = function(results) {
+                    var latLng = new google.maps.LatLng(lat,lng);
+                    var marker = new google.maps.Marker({
+                    position: latLng,
+                    map: map
+                  });
+                }
               }
           }
           window.scrollTo(0, document.body.scrollHeight);
@@ -75,7 +83,7 @@
 
       // Loop through the results array and place a marker for each
       // set of coordinates.
-      window.eqfeed_callback = function(results) {
+      /*window.eqfeed_callback = function(results) {
         for (var i = 0; i < results.features.length; i++) {
           var coords = results.features[i].geometry.coordinates;
           var latLng = new google.maps.LatLng(coords[1],coords[0]);
@@ -84,7 +92,8 @@
             map: map
           });
         }
-      }
+      }*/
+
     </script>
     <script async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD8aKsHLmI76zyCD5N2wds0CfFLaKOSDJk&callback=initMap">
