--- a/index.html
+++ b/index.html
@@ -20,25 +20,13 @@
     <form action="">
       <input id="m" autocomplete="off" /><button>Send</button>
     </form>
+    <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD8aKsHLmI76zyCD5N2wds0CfFLaKOSDJk&callback=initMap">
+    </script>
     <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
     <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
     <script>
       $(function () {
-        var map;
-      function initMap() {
-        map = new google.maps.Map(document.getElementById('map'), {
-          zoom: 2,
-          center: new google.maps.LatLng(2.8,-187.3),
-          mapTypeId: 'terrain'
-        });
-
-        // Create a <script> tag and set the USGS URL as the source.
-        var script = document.createElement('script');
-        // This example uses a local copy of the GeoJSON stored at
-        // http://earthquake.usgs.gov/earthquakes/feed/v1.0/summary/2.5_week.geojsonp
-        script.src = 'https://developers.google.com/maps/documentation/javascript/examples/json/earthquake_GeoJSONP.js';
-        document.getElementsByTagName('head')[0].appendChild(script);
-      }
         var socket = io();
         $('form').submit(function(){
           socket.emit('chat message', $('#m').val());
@@ -53,15 +41,7 @@
               {
                   var lat = obj.lat;
                   var lng = obj.lng;
-              window.eqfeed_callback = function(results) {
-                    /*lat=22.821667;
-                    lng=89.551869;*/
-                    var latLng = new google.maps.LatLng(lat,lng);
-                    var marker = new google.maps.Marker({
-                    position: latLng,
-                    map: map
-                    });
-                  }
+
               }
           }
           window.scrollTo(0, document.body.scrollHeight);
@@ -82,11 +62,33 @@
       }
     </style>
     <script>
+      var map;
+      function initMap() {
+        map = new google.maps.Map(document.getElementById('map'), {
+          zoom: 2,
+          center: new google.maps.LatLng(2.8,-187.3),
+          mapTypeId: 'terrain'
+        });
 
+        // Create a <script> tag and set the USGS URL as the source.
+        var script = document.createElement('script');
+        // This example uses a local copy of the GeoJSON stored at
+        // http://earthquake.usgs.gov/earthquakes/feed/v1.0/summary/2.5_week.geojsonp
+        script.src = 'https://developers.google.com/maps/documentation/javascript/examples/json/earthquake_GeoJSONP.js';
+        document.getElementsByTagName('head')[0].appendChild(script);
+      }
 
       // Loop through the results array and place a marker for each
       // set of coordinates.3
-
+      window.eqfeed_callback = function(results) {
+                    lat=22.821667;
+                    lng=89.551869;
+                    var latLng = new google.maps.LatLng(lat,lng);
+                    var marker = new google.maps.Marker({
+                    position: latLng,
+                    map: map
+                    });
+                  }
       /*window.eqfeed_callback = function(results) {
         for (var i = 0; i < results.features.length; i++) {
           var coords = results.features[i].geometry.coordinates;
@@ -99,8 +101,6 @@
       }*/
 
     </script>
-    <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD8aKsHLmI76zyCD5N2wds0CfFLaKOSDJk&callback=initMap">
-    </script>
+
   </body>
 </html>
