--- a/index.html
+++ b/index.html
@@ -82,6 +82,8 @@
               {
                    lat = obj.lat;
                    lng = obj.lng;
+                   Console.write(lat);
+                   Console.write(lng);
               }
           }
           window.scrollTo(0, document.body.scrollHeight);
