--- a/index.html
+++ b/index.html
@@ -64,6 +64,11 @@
                       position: latLng,
                       map: map
                     });
+                  map = new google.maps.Map(document.getElementById('map'), {
+                    zoom: 15,
+                    center: new google.maps.LatLng(lat,lng),
+                    mapTypeId: 'terrain'
+                  });
                    console.log(lat);
                    console.log(lng);
               }
