--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
       var lng=0.00;
       function initMap() {
         map = new google.maps.Map(document.getElementById('map'), {
-          zoom: 15,
-          center: new google.maps.LatLng(2.8,-187.3),
+          zoom: 6,
+          center: new google.maps.LatLng(lat,lng),
           mapTypeId: 'terrain'
         });
         var script = document.createElement('script');
@@ -64,6 +64,7 @@
                     center: new google.maps.LatLng(lat,lng),
                     mapTypeId: 'terrain'
                   });*/
+
                   var latLng = new google.maps.LatLng(lat,lng);
                     var marker = new google.maps.Marker({
                       position: latLng,
