--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>Socket.IO chat</title>
+    <title>Drone Server</title>
     <style>
       * { margin: 0; padding: 0; box-sizing: border-box; }
       body { font: 13px Helvetica, Arial; }
@@ -57,20 +57,14 @@
           if(obj.u=="eagle"){
               if(obj.action=="location")
               {
-                   lat = obj.lat;
-                   lng = obj.lng;
-                   /*map = new google.maps.Map(document.getElementById('map'), {
-                    zoom: 6,
-                    center: new google.maps.LatLng(lat,lng),
-                    mapTypeId: 'terrain'
-                  });*/
-                   map.panTo(new google.maps.LatLng(lat,lng));
-                  var latLng = new google.maps.LatLng(lat,lng);
+                    lat = obj.lat;
+                    lng = obj.lng;
+                    map.panTo(new google.maps.LatLng(lat,lng));
+                    var latLng = new google.maps.LatLng(lat,lng);
                     var marker = new google.maps.Marker({
                       position: latLng,
                       map: map
                     });
-
                    console.log(lat);
                    console.log(lng);
               }
