--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>Drone Server</title>
+    <title>Socket.IO chat</title>
     <style>
       * { margin: 0; padding: 0; box-sizing: border-box; }
       body { font: 13px Helvetica, Arial; }
@@ -15,34 +15,12 @@
     </style>
   </head>
   <body>
-    <div id="map"></div>
     <ul id="messages"></ul>
     <form action="">
       <input id="m" autocomplete="off" /><button>Send</button>
     </form>
-    <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD8aKsHLmI76zyCD5N2wds0CfFLaKOSDJk&callback=initMap">
-    </script>
     <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
     <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
-    <script>
-      var map;
-      var lat=0.00;
-      var lng=0.00;
-      function initMap() {
-        map = new google.maps.Map(document.getElementById('map'), {
-          zoom: 6,
-          center: new google.maps.LatLng(lat,lng),
-          mapTypeId: 'terrain'
-        });
-        var script = document.createElement('script');
-        script.src = 'https://developers.google.com/maps/documentation/javascript/examples/json/earthquake_GeoJSONP.js';
-        document.getElementsByTagName('head')[0].appendChild(script);
-      }
-      window.eqfeed_callback = function(results) {
-      }
-
-    </script>
     <script>
       $(function () {
         var socket = io();
@@ -53,40 +31,17 @@
         });
         socket.on('chat message', function(msg){
           $('#messages').append($('<li>').text(msg));
-          var obj = JSON.parse(msg);
-          if(obj.u=="eagle"){
-              if(obj.action=="location")
-              {
-                    lat = obj.lat;
-                    lng = obj.lng;
-                    map.panTo(new google.maps.LatLng(lat,lng));
-                    var latLng = new google.maps.LatLng(lat,lng);
-                    var marker = new google.maps.Marker({
-                      position: latLng,
-                      map: map
-                    });
-                   console.log(lat);
-                   console.log(lng);
-              }
-          }
           window.scrollTo(0, document.body.scrollHeight);
         });
       });
+/*function startFunction() {
+	var socket = io();
+         socket.emit('chat message','420:420:307:420:307:307:307:307:0');  // The function returns the product of p1 and p2
+}
+	var interval = setInterval(startFunction, 200);
+		setTimeout(function() {
+    			clearInterval(interval)
+		}, 2000);*/
     </script>
-    <style>
-      /* Always set the map height explicitly to define the size of the div
-       * element that contains the map. */
-      #map {
-        height: 100%;
-      }
-      /* Optional: Makes the sample page fill the window. */
-      html, body {
-        height: 100%;
-        margin: 0;
-        padding: 0;
-      }
-    </style>
-
-
   </body>
 </html>
