--- a/drone.html
+++ b/drone.html
@@ -33,7 +33,7 @@
         map = new google.maps.Map(document.getElementById('map'), {
           zoom: 20,
           center: new google.maps.LatLng(lat,lng),
-          mapTypeId: google.maps.MapTypeId.HYBRID
+          mapTypeId: 'satellite'
         });
         var script = document.createElement('script');
         script.src = 'https://developers.google.com/maps/documentation/javascript/examples/json/earthquake_GeoJSONP.js';
