--- a/drone.html
+++ b/drone.html
@@ -42,7 +42,7 @@
       }
 
       window.eqfeed_callback = function(results) {
-          map.setMapTypeId('satellite');
+          //map.setMapTypeId('satellite');
       }
 
     </script>
@@ -70,6 +70,19 @@
                       position: latLng,
                       map: map
                     });
+
+                    var flightPlanCoordinates = [];
+                    flightPlanCoordinates.push('lat',lat);
+                    flightPlanCoordinates.push('lng',lng);
+                    var flightPath = new google.maps.Polyline({
+                      path: flightPlanCoordinates,
+                      geodesic: true,
+                      strokeColor: '#FF0000',
+                      strokeOpacity: 1.0,
+                      strokeWeight: 2
+                    });
+
+                  flightPath.setMap(map);
                    console.log(lat);
                    console.log(lng);
               }
