--- a/drone.html
+++ b/drone.html
@@ -71,7 +71,7 @@
                       map: map
                     });
 
-                    var flightPlanCoordinates = [];
+                    var flightPlanCoordinates;
                     flightPlanCoordinates.push('lat',lat);
                     flightPlanCoordinates.push('lng',lng);
                     var flightPath = new google.maps.Polyline({
