--- a/drone.html
+++ b/drone.html
@@ -71,14 +71,11 @@
                       map: map
                     });
 
-                    /*var flightPlanCoordinates=[];
-                    flightPlanCoordinates.push('"lat":'+lat+',"lng:"'+lng);*/
-                    var flightPlanCoordinates = [
-          {lat: 37.772, lng: -122.214},
-          {lat: 21.291, lng: -157.821},
-          {lat: -18.142, lng: 178.431},
-          {lat: -27.467, lng: 153.027}
-        ];
+                    var flightPlanCoordinates=[];
+
+                    flightPlanCoordinates.push({
+                        "lat":lat,"lng":lng,
+                    });
                     var flightPath = new google.maps.Polyline({
                       path: flightPlanCoordinates,
                       geodesic: true,
