--- a/drone.html
+++ b/drone.html
@@ -73,7 +73,7 @@
 
 
 
-                    flightPlanCoordinates.push({"lat":lat,"lng":lng},
+                    flightPlanCoordinates.push(
                     {"lat":lat,"lng":lng}
                     );
                     var flightPath = new google.maps.Polyline({
