--- a/drone.html
+++ b/drone.html
@@ -47,7 +47,7 @@
 
     </script>
     <script>
-       var flightPlanCoordinates=Object.create(null);
+       var flightPlanCoordinates=[];
       $(function () {
         var socket = io();
         $('form').submit(function(){
