--- a/drone.html
+++ b/drone.html
@@ -48,6 +48,7 @@
     </script>
     <script>
        var flightPlanCoordinates=[];
+       var i=0;
       $(function () {
         var socket = io();
         $('form').submit(function(){
@@ -76,15 +77,19 @@
                     flightPlanCoordinates.push(
                     {"lat":lat,"lng":lng}
                     );
-                    var flightPath = new google.maps.Polyline({
-                      path: flightPlanCoordinates,
-                      geodesic: true,
-                      strokeColor: '#FF0000',
-                      strokeOpacity: 1.0,
-                      strokeWeight: 2
-                    });
 
-                  flightPath.setMap(map);
+                    if(i>0)
+                    {
+                        var flightPath = new google.maps.Polyline({
+                          path: flightPlanCoordinates,
+                          geodesic: true,
+                          strokeColor: '#FF0000',
+                          strokeOpacity: 1.0,
+                          strokeWeight: 2
+                        });
+                      flightPath.setMap(map);
+                    }
+
                    console.log(lat);
                    console.log(lng);
               }
