--- a/drone.html
+++ b/drone.html
@@ -77,7 +77,7 @@
                     flightPlanCoordinates.push(
                     {"lat":lat,"lng":lng}
                     );
-
+                    console.log(i);
                     if(i>0)
                     {
                         var flightPath = new google.maps.Polyline({
