--- a/drone.html
+++ b/drone.html
@@ -64,8 +64,7 @@
           if(obj.u=="eagle"){
               if(obj.action=="location")
               {
-                  alert("locat")
-                    /*latA = obj.lat;
+                    latA = obj.lat;
                     lngA = obj.lng;
                     map.panTo(new google.maps.LatLng(latA,lngA));
                     map.setMapTypeId('satellite');
@@ -75,8 +74,8 @@
                       position: latLng,
                       map: map
                     });
-                    /!*icon: iconBase + 'quad-icon',*!/
-                    var point =new google.maps.LatLng(latA,lngA);
+                    /*icon: iconBase + 'quad-icon',*/
+                    /*var point =new google.maps.LatLng(latA,lngA);
                     flightPlanCoordinates.push(point);
                     var flightPath = new google.maps.Polyline({
                       path: flightPlanCoordinates,
@@ -86,9 +85,9 @@
                       strokeWeight: 2
                     });
 
-                  flightPath.setMap(map);
+                  flightPath.setMap(map);*/
                    console.log(latA);
-                   console.log(lngA);*/
+                   console.log(lngA);
               }
           }
           window.scrollTo(0, document.body.scrollHeight);
