--- a/drone.html
+++ b/drone.html
@@ -75,7 +75,7 @@
                       map: map
                     });
                     /*icon: iconBase + 'quad-icon',*/
-                    /*var point =new google.maps.LatLng(latA,lngA);
+                    var point =new google.maps.LatLng(latA,lngA);
                     flightPlanCoordinates.push(point);
                     var flightPath = new google.maps.Polyline({
                       path: flightPlanCoordinates,
@@ -84,8 +84,8 @@
                       strokeOpacity: 1.0,
                       strokeWeight: 2
                     });
+                    flightPath.setMap(map);
 
-                  flightPath.setMap(map);*/
                    console.log(latA);
                    console.log(lngA);
               }
