--- a/drone.html
+++ b/drone.html
@@ -60,6 +60,7 @@
         });
         socket.on('chat message', function(msg){
           $('#messages').append($('<li>').text(msg));
+          //document.getElementById("messages").style.visibility = "hidden";
           var obj = JSON.parse(msg);
           if(obj.u=="eagle"){
               if(obj.action=="location")
