--- a/drone.html
+++ b/drone.html
@@ -31,7 +31,7 @@
       var map;
       var lat=0.00;
       var lng=0.00;
-      //var iconBase = 'http://184.72.95.87:3000/';
+      var iconBase = 'http://184.72.95.87:3000/';
       function initMap() {
         map = new google.maps.Map(document.getElementById('map'), {
           zoom: 17,
