--- a/drone.html
+++ b/drone.html
@@ -59,7 +59,7 @@
           return false;
         });
         socket.on('chat message', function(msg){
-          $('#messages').append($('').text(msg));
+          $('#messages').append($('<li>').text(msg));
           document.getElementById("messages").style.visibility = "hidden";
           var obj = JSON.parse(msg);
           if(obj.u=="eagle"){
