--- a/drone.html
+++ b/drone.html
@@ -60,7 +60,7 @@
         });
         socket.on('chat message', function(msg){
           $('#messages').append($('<li>').text(msg));
-          document.getElementById("messages").style.visibility = "hidden";
+          //document.getElementById("messages").style.visibility = "collapse";
           var obj = JSON.parse(msg);
           if(obj.u=="eagle"){
               if(obj.action=="location")
@@ -108,6 +108,9 @@
         margin: 0;
         padding: 0;
       }
+        li {
+            display: inline;
+       }
     </style>
 
 
