--- a/drone.html
+++ b/drone.html
@@ -59,8 +59,12 @@
           return false;
         });
         socket.on('chat message', function(msg){
-          $('#messages').append($('<li>').text(msg));
+          //$('#messages').append($('<li>').text(msg));
           //document.getElementById("messages").style.visibility = "collapse";
+            $(window).focus(function() {
+                console.log('welcome (back)');
+            });
+
           var obj = JSON.parse(msg);
           if(obj.u=="eagle"){
               if(obj.action=="location")
