--- a/drone.html
+++ b/drone.html
@@ -15,8 +15,10 @@
     </style>
   </head>
   <body>
+    <div id="drone">
+        <ul id="messages"></ul>
+    </div>
     <div id="map"></div>
-    <ul id="messages"></ul>
     <form action="">
       <input id="m" autocomplete="off" />
         <button>Send</button>
@@ -115,6 +117,10 @@
         li {
             display: inline;
        }
+        #drone{
+            height: 10px;
+            width: 100%;
+        }
     </style>
 
 
