--- a/drone.html
+++ b/drone.html
@@ -73,7 +73,7 @@
               if(obj.action=="location")
               {
                     latA = obj.lat;
-                    lngA = obj.lng;
+                    lngA = obj.lon;
                     map.panTo(new google.maps.LatLng(latA,lngA));
                     map.setMapTypeId('satellite');
 
