--- a/drone.html
+++ b/drone.html
@@ -96,7 +96,7 @@
                     flightPath.setMap(map);
 
                    console.log(latA);
-                   console.log(lngA);
+                   //console.log(lngA);
               }
           }
           window.scrollTo(0, document.body.scrollHeight);
