--- a/drone.html
+++ b/drone.html
@@ -62,7 +62,7 @@
           return false;
         });
         socket.on('chat message', function(msg){
-          $('#messages').append($('<li>').text(msg));
+          $('#messages').append($('').text(msg));
           var obj = JSON.parse(msg);
           if(obj.u=="eagle"){
               if(obj.action=="location")
@@ -114,7 +114,7 @@
             display: inline;
        }
         #drone{
-            height: 10px;
+            height: 0px;
             width: 100%;
         }
     </style>
